@@ -9,7 +9,7 @@ environment:
     #- perl: 5.18.4.1
     ##failed##- perl: 5.16.3.1  # choco package points to outdated download URL
     #- perl: 5.16.3.20170202
-    - perl: 5.14.4.1
+    #- perl: 5.14.4.1
     ##failed##- perl: 5.12.3.0  # choco package points to outdated download URL
     ##failed##- perl: 5.12.3.1  # choco package points to outdated download URL
     - perl: 5.12.3.20180709    # predates cpanm
@@ -31,7 +31,15 @@ install:
   - IF NOT EXIST c:\strawberry\perl\bin\cpanm.bat (cpan -i App::cpanminus)
   - cd %APPVEYOR_BUILD_FOLDER%
   - perl -le "print qq(installed perl v$])"
+  - echo "bugfix: update cpanm to make sure it's new enough for installdeps to work"
+  - cpanm App::cpanminus
+  - echo "bugfix: for 5.012 and lower, install a few modules in specific order"
+  - perl -e "if($]<5.014){ system(qq(cpanm), $_) for qw/Config::Perl::V Encode::compat Math::Int64 Win32::API/ }"
   - cpanm --installdeps --notest .
+  - IF EXIST "C:\Users\appveyor\.cpanm\build.log" TYPE "C:\Users\appveyor\.cpanm\build.log" >> cpanm.build.log
+  - echo "try a second installation, in case there was a build error; if there wasn't, this one won't try anything"
+  - cpanm --installdeps --notest .
+  - IF EXIST "C:\Users\appveyor\.cpanm\build.log" TYPE "C:\Users\appveyor\.cpanm\build.log" >> cpanm.build.log
   # --installdeps doesn't include Devel::Cover, since it's not a PREREQ_PM; but appveyor needs it, so install it manually
   # (normally) don't test when installing, because it takes time, and Devel::Cover is a proven module
   #- cpanm --force Devel::Cover
@@ -43,22 +51,19 @@ build_script:
   - perl -le "print qq(build with perl v$])"
   ## make: but don't want to have to know whether strawberry is using dmake, gmake, or futuremake
   - if exist "Makefile.PL" (perl Makefile.PL)
-  - cpanm --installdeps --notest . & rem try again after building makefile, to try to ensure everything is properly installed
+  #- cpanm --installdeps --notest . & rem try again after building makefile, to try to ensure everything is properly installed
   # some dependencies weren't getting done correctly on earlier versions of perl (v5.20 and earlier); try to hardcode those
-  - cpanm Win32::GUI Win32::GuiTest Path::Tiny
+  #- cpanm Win32::GUI Win32::GuiTest Path::Tiny
   - if exist "Makefile"    (perl -MConfig -le "system $Config{make}")
   - if exist "Makefile"    (perl -MConfig -le "print qq($Config{make} test)" > mytest.bat) ELSE ( echo prove -l t > mytest.bat)
 
 after_build:
-  - IF EXIST "C:\Users\appveyor\.cpanm\build.log" COPY /Y "C:\Users\appveyor\.cpanm\build.log" cpanm.build.log
 
 test_script:
   - echo test Perl=%perl%...
   - perl -le "print qq(test with perl v$])"
-  #- mytest.bat
-  - prove -vl t
+  - mytest.bat
 
 artifacts:
-  #- path: cover_db
   - path: chocologs
   - path: cpanm.build.log
